--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,6 +1,9 @@
 @import "vars";
 
 .home{
+
+    /* HEADER */
+
    .header {
        display: flex;
        img {
@@ -10,35 +13,36 @@
            }
        }
        h1{
-           font-size : 1.3rem;
-           margin : 3% auto;
-           text-align : center;
-           text-transform : uppercase;
-           line-height: 1.5em;
-           width : 80%;
+           font-size : 1.4rem;
+           font-weight: 600;
+           margin : -3rem auto;
+           padding: 1rem;
+           text-align : left;
+           line-height: 1.3em;
            @media screen and (min-width: 740px) {
                width : 50%;
-               font-size: 1.3rem;
-               margin-top : 0;
+               font-size: 1.8rem;
+               margin-top : -3rem;
            }
            @media screen and (min-width: 1025px) {
-               width : 30%;
+               width : 40%;
                font-size: 2.3rem;
-               margin: 10px 5% 10px 15%;
            }
 
            img {
-               width: 25%;
+               margin-top: -3rem;
+               width: 50%;
            }
 
            .blue-font{
-               color : $secondary-color;
+               color : $primary-color;
                font-weight : bold;
            }
        }
    }
 
     /* STEPS */
+
     .steps {
         display : flex;
         flex-direction : column;
@@ -48,16 +52,13 @@
         margin : 45px auto;
 
         @media screen and (min-width: 740px){
-            display : flex;
             flex-direction : row;
             justify-content:  space-around;
             align-items: flex-start;
         }
         @media screen and (min-width: 1025px){
             margin : auto;
-
         }
-
 
         article{
             width : 300px;
@@ -66,7 +67,6 @@
             }
 
             .step{
-
                 height : 188px;
                 width: 90%;
                 max-width: 100%;
@@ -94,10 +94,8 @@
                     left: -82px;
                 }
 
-
-
                 div{
-                    background-color : $secondary-color;
+                    background-color : $primary-color;
                     border-radius: 25px;
                     margin-right : 10px;
                     margin-bottom : 8px;
@@ -130,19 +128,6 @@
                         }
                     }
                 }
-
-                p{
-                    text-transform : uppercase;
-                    font-size : 0.8rem;
-                    text-align : center;
-                    margin : 0 10px 25px 0;
-                    @media screen and (min-width: 740px) {
-                        font-size: 0.7rem;
-                    }
-                    @media screen and (min-width: 1025px) {
-                        font-size: 1rem;
-                    }
-                }
             }
 
             #step1 {
@@ -153,7 +138,7 @@
                     left: -99%;
                     width: 300%;
                     @media screen and (min-width: 1025px) {
-                        top: -108%
+                        top: -108%;
                     }
                 }
             }
@@ -166,7 +151,7 @@
                     left: -99%;
                     width: 300%;
                     @media screen and (min-width: 1025px) {
-                        top: -103%
+                        top: -103%;
                     }
                 }
             }
@@ -174,6 +159,7 @@
     }
 
     /* BAIL BIPBIP */
+
     .bail-bipbip{
         margin : 80px auto;
 
@@ -216,11 +202,12 @@
             }
 
             .buble-text {
+                display:block;
                 position: absolute;
                 bottom: 60%;
                 right: 50%;
                 top: 25%;
-                background: $secondary-color;
+                background: $primary-color;
                 color: #FFFFFF;
                 font-weight: bold;
                 border-radius: 10px;
@@ -228,7 +215,7 @@
                 height: 37px;
                 padding: 8px 2px;
                 text-align: center;
-                @media screen and (min-width: 1025px){
+                @media screen and (min-width: 740px){
                     width: 14%;
                     top: 44%;
                     right: 33%;
@@ -238,64 +225,15 @@
                 content:"";
                 border-right: 6px solid transparent;
                 border-left: 14px solid transparent;
-                border-top: 27px solid $secondary-color;
+                border-top: 27px solid $primary-color;
                 position: absolute;
                 top: 52%;
                 right: 2%;
             }
         }
-
-
     }
 
-    /* PARTNERS */
-    .home-partner{
-        margin : 80px auto;
+    /* COMBIEN VAUT */
 
-        h3{
-            font-size : 1.3rem;
-            color : $primary-color;
-            text-align: center;
-            font-weight: bold;
-            margin : 2% 8%;
-        }
 
-        article{
-            display : flex;
-            justify-content: center;
-            flex-wrap : wrap;
-            margin-bottom : 6%;
-            margin-top : 6%;
-            @media screen and (min-width: 740px) {
-                width : 80%;
-                margin : auto;
-            }
-
-            a {
-                display : block;
-                width : 18%;
-                margin: 4%;
-                @media screen and (min-width: 740px) {
-                    width : 12%;
-                }
-
-                img {
-                    width: 100%;
-                    @media screen and (min-width: 740px) {
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
-
-    /* CONTACT */
-    .contact{
-        margin : 80px auto;
-
-        .fourth-button{
-            font-size : 1rem;
-            width : 150px;
-        }
-    }
 }
