--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}BipBip Mobile{% endblock %}</title>
-        <link rel="stylesheet" href="https://use.typekit.net/xdq8cqe.css">
+        <link href="https://fonts.googleapis.com/css?family=Century+Gothic" rel="stylesheet" />
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -41,7 +41,7 @@
                     {% endif %}
                 </div>
             </nav>
-            <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/new-logo-bipbip.png" alt="logo bipbip" /></a>
+            <a href="{{ path('home') }}" class="logo-bipbip"><img src="{{ asset('/images/new-logo-bipbip.png') }}" alt="BipBip ton Green Mobile" /></a>
             {% for message in app.flashes('success') %}
                 <div class="alert alert-success text-center">
                     {{ message }}
@@ -73,73 +73,59 @@
 
         {% block footer %}
         <footer>
-            <h2 class="primary-title">T'en veux plus ?</h2>
-            <div class="social-networks">
-                <a href="#" target="_blank" title="Page Facebook">
-                    <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" />
-                </a>
-                <a href="#" target="_blank" title="Instagram">
-                    <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" />
-                </a>
-                <a href="#" target="_blank" title="LinkedIn">
-                    <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" />
-                </a>
-            </div>
-            <div class="container links-footer">
-                <div class="row">
-                    <div class="col-sm m-3">
-                        <div class="font-weight-bold pb-2">
-                            A propos de BipBip<br>
-                        </div>
-                        <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
-                            Qui sommes-nous ?
-                        </a><br>
-                        <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
-                            Notre mission
-                        </a><br>
-                        <br>
-                        <a href="{{ path('protection') }}" title="Protection des données">
-                            Ce qu'on oublie de lire
-                        </a><br>
-                        <br>
-                        <a href="{{ path('home') }}" title="Collectes et évènements">
-                            Collectes et évènements
-                        </a>
+            <div class="row links-footer m-0 p-4">
+                <div class="col-sm">
+                    <div class="font-weight-bold pb-2">
+                        A propos de BipBip<br>
                     </div>
-                    <div class="col-sm m-3">
-                        <div class="font-weight-bold pb-2">
-                            S'informer<br>
-                        </div>
-                        <a href="{{ path('show_collect') }}" title="Points de collecte">
-                            Points de collecte
-                        </a><br>
-                        <a href="{{ path('organisms_index') }}" title="Nos partenaires">
-                            Nos partenaires
-                        </a><br>
-                        <a href="{{ path('add_message') }}" title="Devenir partenaire">
-                            Devenir partenaire
-                        </a><br>
-                        <br>
-                        <a href="{{ path('faq_index') }}" title="FAQ">
-                            FAQ
-                        </a>
+                    <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
+                        Qui sommes-nous ?
+                    </a><br>
+                    <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
+                        Notre mission
+                    </a><br>
+                    <br>
+                    <a href="{{ path('protection') }}" title="Protection des données">
+                        Ce qu'on oublie de lire
+                    </a><br>
+                    <br>
+                    <a href="{{ path('home') }}" title="Collectes et évènements">
+                        Collectes et évènements
+                    </a>
+                </div>
+                <div class="col-sm">
+                    <div class="font-weight-bold pb-2">
+                        S'informer<br>
                     </div>
-                    <div class="col-sm m-3">
-                        <div class="font-weight-bold pb-2">
-                            Besoin d'aide ?<br>
-                        </div>
-                        <a href="{{ path('home') }}" title="Comment bien choisir son smarthpone reconditionné ?">
-                            Comment bien choisir son smarthpone reconditionné ?
-                        </a><br>
-                        <br>
-                        <a href="{{ path('home') }}" title="Nos partenaires">
-                            Les grades de smartphone reconditionnés BipBip
-                        </a><br>
-                        <br>
-                        <a href="{{ path('add_message') }}" title="Contact">
-                            Nous contacter
-                        </a>
+                    <a href="{{ path('show_collect') }}" title="Points de collecte">
+                        Points de collecte
+                    </a><br>
+                    <a href="{{ path('organisms_index') }}" title="Nos partenaires">
+                        Nos partenaires
+                    </a><br>
+                    <a href="{{ path('add_message') }}" title="Devenir partenaire">
+                        Devenir partenaire
+                    </a><br>
+                    <br>
+                    <a href="{{ path('faq_index') }}" title="FAQ">
+                        FAQ
+                    </a>
+                </div>
+                <div class="col-sm">
+                    <div class="font-weight-bold pb-2">
+                        Besoin d'aide ?<br>
                     </div>
+                    <a href="{{ path('home') }}" title="Comment bien choisir son smarthpone reconditionné ?">
+                        Comment bien choisir son smarthpone reconditionné ?
+                    </a><br>
+                    <br>
+                    <a href="{{ path('home') }}" title="Nos partenaires">
+                        Les grades de smartphone reconditionnés BipBip
+                    </a><br>
+                    <br>
+                    <a href="{{ path('add_message') }}" title="Contact">
+                        Nous contacter
+                    </a>
                 </div>
             </div>
         </footer>
