Finish text and pictures of new HomePage, ok in desktop version

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,6 +1,6 @@
 $primary-color: #159FAD;
 $secondary-color: #60CEC6;
-$third-color : #56B678;
+$third-color : #65AE6E;
 $fourth-color : #007F68;
 
 $primary-font: 'Avenir Next';
